--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <h1 class="display-3 text-left">Vaccination Slot</h1>
 
-      <div class="container">
+      <div class="container" style="margin-bottom: 40px;">
         <div class="row align-items-start">
           <div class="col">
             <div class="dropdown">
